# joebob-data

./: README.md  joebob.json  main.py  pyproject.toml
sources/: 2018_11_08_cinemassacre_monstervision.html
util/: dates.py
