[tool.poetry]
name = "joebob-data"
version = "0.1.0"
description = ""
authors = ["Ryan Manny <ryan.w.manny@gmail.com>"]
license = "gpl-v3"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
